--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,14 @@ pages_list:
 
 # Exclusion list from the generated _site
 
-exclude: ["LICENSE", "README.md", "CONTRIBUTING", "CONTRIBUTORS", "scripts"]
+exclude:
+    - LICENSE
+    - README.md
+    - CONTRIBUTING
+    - CONTRIBUTORS
+    - scripts
+    - vendor
+    - bin
 
 # Pagination path
 
