--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://panossakkos.github.io"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-baseurl: /personal-jekyll-theme
+baseurl:
 
 # Google tracking id to track your visitors
 
@@ -30,7 +30,7 @@ force-https: True
 
 lang: "en"
 author: "John Smith"
-title: "{ John Smith }"
+title: "WISE Robotics"
 description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
 keywords: "smith, jones, personal, jekyll, theme"
 favicon: "/img/favicon.ico"
@@ -39,7 +39,7 @@ favicon: "/img/favicon.ico"
 # Header layout #
 ################
 
-black-favicon: "/img/black-lab-glass.ico"
+black-favicon: "/img/black-wise-robotics.png"
 
 background-img: "../img/intro-bg.jpg"
 
@@ -58,7 +58,7 @@ lines: # You can add HTML Tags in the Text
   - text: "The lower you fall, the higher you'll fly."
   - text: "Where’s your will to be weird?"
 
-me-img: "/img/jetpacktocat.png"
+me-img: "/img/wise-robotics-inverted.png"
 
 ##############################
 # Color the browser elements #
