Disable link to blog
For now we dont have any blog post, I will reenable it when we get some.

--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ social:
 
 pages_list:
   About: 'about'
-  Blog: 'latest-post'
+  # Blog: 'latest-post'
   Skills: 'skills'
   Projects: 'timeline'
   Contact: 'contact'
