--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,33 +16,49 @@
       It is connected to a CAN-bus for control and configuration.
 
 - title: Satellite Attitude Determination
+  date:
+      begin: 09/2015
+      end: 01/2016
   description: |
       Spacecraft attitude determination using state-of-the-art Kalman filter based sensor fusion with low-power consumption constraints.
       Including integration in a real time embedded system of a nanosatellite.
 
 - title: Satellite Mechanical Subsystem Design
+  date:
+      begin: 09/2015
+      end: 01/2016
   description: |
       Development of an energy storage module for a nanosatellite.
       The project included the electronics design of the primary power switch and mechanical design of a thermally insulated battery box.
       The challenges were the size and weight constraints as well as the resistance to the vibrations of the rocket launch environment.
 
 - title: Smart Energy Metering System
+  date:
+      begin: 08/2015
   description: |
       The device uses a set of image processing filters for digit extraction and neural network based classification for meter readout.
       The result is then transmitted over a low power wireless network to a custom logging server.
       This has been implemented in a battery powered product with low-power constraints.
 
 - title: Stereo-Vision Based Localization
+  date:
+      begin: 09/2014
+      end: 01/2015
   description: |
       A binocular localization system was built and programmed for a self-stabilized platform.
       The system relied on vision feedback to extract and track stereo-feature pairs that were fused into a Kalman filter in order to infer position, attitude and velocity of the system.
 
 - title: Small Mobile Robot for Engineering Education
+  date:
+      begin: 03/2015
+      end: 06/2015
   description: |
       Design and implementation of the electronics, firmware, communication stack and porting of a virtual machine based framework for a small mobile robot.
       It lays the ground for an education platform that allows the exploration of various concepts.
 
 - title: Development of a Basic Motor Intention Decoder Using EEG
+  date:
+      begin: 03/2016
   description: |
       Identification of basic motor intention based on motor imagery process.
       The project included data acquisition, pre-processing, feature extraction and classification using machine learning methods.
