Add quotes by Elon Musk

--- a/_config.yml
+++ b/_config.yml
@@ -49,14 +49,13 @@ background-img: "../img/intro-bg.jpg"
 
 dynamic-typing: True
 shuffle: True # Shuffle the lines.
-loop: True
+loop: False
 loop-count: False # Set False for infinite loop, or set any number for finite loop.
 type-speed: 10
 start-delay: 200
 delete-delay: 5000
 lines: # You can add HTML Tags in the Text
-  - text: "The lower you fall, the higher you'll fly."
-  - text: "Where’s your will to be weird?"
+  - text: "Great companies are built on great products."
 
 me-img: "/img/wise-robotics-inverted.png"
 
